modifed: now everything looks great on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="app-height">
   <head>
     <meta charset="utf-8" />
 
@@ -7,8 +7,8 @@
     <meta name="theme-color" content="#276749" />
     <title>Chatify &bull; Chat with the world</title>
   </head>
-  <body>
+  <body class="min-h-screen app-height">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="h-full"></div>
   </body>
 </html>
