added: icons and manifest json

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#276749" />
+    <link rel="icon" href="logo.png" type="image/png" />
+    <link rel="manifest" href="manifest.json" />
     <title>Chatify &bull; Chat with the world</title>
   </head>
   <body class="min-h-screen app-height">
